--- a/VisualStudioCodeAlignment/VisualStudioAlignProperties.csproj
+++ b/VisualStudioCodeAlignment/VisualStudioAlignProperties.csproj
@@ -52,7 +52,7 @@
     <Compile Include="CSharpPropertyAligner.cs" />
     <Compile Include="LineObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Commands\MyCommand.cs" />
+    <Compile Include="Commands\AlignCSharpProperties.cs" />
     <Compile Include="VSIXExtensionHelper.cs" />
     <Compile Include="VSIXProject4Package.cs" />
     <Compile Include="source.extension.cs">
@@ -74,7 +74,7 @@
       <LastGenOutput>source.extension.cs</LastGenOutput>
     </None>
     <Content Include="Resources\Icon.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
   </ItemGroup>
